--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
         </div>
     </header>
     <main>
+        <table id="tableEdit">
+            <tr>
+                <th>title</th>
+                <th>title 2</th>
+            </tr>
+            <tr>
+                <td>Text</td>
+                <td>Text</td>
+            </tr>
+        </table>
+
         <section class="section-carousel">
             <div class="carousel">
                 <div id="imagen"></div>
