Agregacion de titulo

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         </div>
     </header>
     <main>
+        <div>
+            <h1 id="titleNew">Title New</h1>
+        </div>
         <section class="section-carousel">
             <div class="carousel">
                 <div id="imagen"></div>
