Modificación de estilo y index

--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
                 </div>
             </div>
         </section> 
-        
+        <section>
+            <div>
+                <h1 id="titleBootcamps">Test bootcamps</h1>
+            </div>
+        </section>
         <section class="section-division">
             <img src="./img/logo_animation.jpg" class="progress" alt="">
         </section>
