--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table border="2">
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>React</td>
+            <td>learn</td>
+        </tr>
+    </table>
 </body>
 </html>
