formulario de contacto

--- a/index.html
+++ b/index.html
@@ -17,5 +17,18 @@
             <td>learn</td>
         </tr>
     </table>
+    <br>
+    <div class="content">
+        <form action="" method="get">
+            <label for="name">Nombre</label>
+            <input type="text" name="name" id="name">
+            <br>
+            <label for="subject">Asunto</label>
+            <input type="text" name="subject" id="subject">
+            <br>
+            <label for="description">Mensaje</label>
+            <textarea name="description" id="" cols="30" rows="10"></textarea>
+        </form>
+    </div>
 </body>
 </html>
