--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
             <td>learn</td>
         </tr>
     </table>
+    <footer>
+        <p>Copyright bootcamps 2022</p>
+    </footer>
 </body>
 </html>
