agregacion de tabla

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             <textarea name="description" id="" cols="30" rows="10"></textarea>
         </form>
     </div>
+    <table border="5">
+        <tr>
+            <th>Numero</th>
+            <th>Descripcion</th>
+        </tr>
+        <tr>
+            <td>100</td>
+            <td>Remera blanca</td>
+        </tr>
+    </table>
     <footer>
         <p>Copyright bootcamps 2022</p>
     </footer>
