--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </tr>
     </table>
     <footer>
-        <p>Copyright bootcamps 2022</p>
+        <p>Copyright bootcamps 2022.</p>
     </footer>
 </body>
 </html>
